--- a/code/app/build.gradle
+++ b/code/app/build.gradle
@@ -5,7 +5,6 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion "29.0.0"
     defaultConfig {
         applicationId "com.omni.support"
         minSdkVersion 19
@@ -25,6 +24,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.omni.support'
 }
 
 dependencies {
