--- a/code/build.gradle
+++ b/code/build.gradle
@@ -1,7 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.6.21'
     ext.REPO_LOCAL_URL = '../../repo'
 
     ext.REPO_MAVEN_SNAPSHOT_URL = 'http://192.168.100.233:8081/nexus/content/repositories/snapshots/'
@@ -20,7 +20,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.2'
+        classpath 'com.android.tools.build:gradle:8.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -33,7 +33,7 @@ allprojects {
         jcenter()
         maven { url "https://jitpack.io" }
 //        maven { url 'http://192.168.100.246:8081/repository/maven-releases/' }
-        maven { url 'E:\\AndroidStudioProject\\svn\\support\\repo' }
+       // maven { url 'E:\\AndroidStudioProject\\svn\\support\\repo' }
 
 
 //        maven { url 'http://192.168.100.233:8081/nexus/content/repositories/releases/' }
